<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/PreTu"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="402dp"
        android:layout_height="618dp"
        android:background="@drawable/barrel_background_3"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/PreTutorialTitle"
            android:layout_width="369dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/PreTutorialTitle"
            android:textAlignment="center"
            android:textSize="36sp"
            android:typeface="serif" />

        <TextView
            android:id="@+id/PreTutorialHeaderText"
            android:layout_width="394dp"
            android:layout_height="45dp"
            android:text="@string/PreTutorialHeader"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ScrollView
            android:id="@+id/scrollView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/BrewPotText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/BrewPot"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/FermenterText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Fermenter"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/SiphonHoseText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/SiphonHose"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/LargeSpoonText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/LargeSpoon"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/AirLockText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/AirLock"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/HydrometerText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Hydrometer"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/ThermometerText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Thermometer"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/CleanserText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Cleanser"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/SanitizerText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Sanitizer"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/BottlesText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Bottles"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </ScrollView>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/PreTutorialReminderText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/PreTutorialReminder"
                    android:textAlignment="center"
                    android:textSize="24sp"
                    android:textStyle="bold|italic" />

                <TextView
                    android:id="@+id/YeastText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Yeast"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/PrimingSugarText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/PrimingSugar"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/BottleCapsText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/BottleCaps"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </ScrollView>

        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Yeast_Reminder"
            android:textAlignment="center"
            android:textColor="#C6283A"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/toTutorialButton"
            android:layout_width="445dp"
            android:layout_height="51dp"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:background="#FFFFFF"
            android:backgroundTint="#FFFFFF"
            android:text="@string/Start_Brew"
            android:visibility="visible"
            tools:visibility="visible" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>