<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/barrel_background"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/fondamento"
            android:paddingTop="23dp"
            android:paddingBottom="23dp"
            android:text="@string/main_welcome_text"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/Beer_Launcher_background"
            android:textColorLink="#000000"
            android:textSize="40sp"
            android:visibility="visible" />

        <Button
            android:id="@+id/button_create_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/barrel_color"
            android:enabled="true"
            android:fontFamily="@font/fondamento"
            android:shadowColor="@color/colorPrimaryDark"
            android:shadowDx="20"
            android:shadowDy="20"
            android:text="@string/main_create_beer"
            android:textColor="@color/Beer_Launcher_background"
            android:textSize="22sp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/separator"
            android:paddingTop="20dp"
            app:srcCompat="@drawable/separator" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/fondamento"
            android:paddingTop="23dp"
            android:paddingBottom="10dp"
            android:text="@string/main_updates_text"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/fondamento"
            android:text="@string/main_updates"
            android:textAlignment="center"
            android:textColor="@color/Beer_Launcher_background"
            android:textSize="33sp" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/separator"
            android:paddingTop="20dp"
            app:srcCompat="@drawable/separator" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/fondamento"
            android:paddingTop="23dp"
            android:paddingBottom="10dp"
            android:text="@string/main_current_text"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/fondamento"
            android:text="@string/main_current_beers"
            android:textAlignment="center"
            android:textColor="@color/Beer_Launcher_background"
            android:textSize="33sp" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>