<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/BottlingTutorial"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/barrel_background_4">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Bottling_tutorial"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.13" />

    <ScrollView
        android:id="@+id/scrollView4"
        android:layout_width="415dp"
        android:layout_height="367dp"
        android:layout_marginTop="47dp"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toTopOf="@+id/Done3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/BottlingText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Test" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/Done3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Finish"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.751" />

</androidx.constraintlayout.widget.ConstraintLayout>